Added Bmi swagger.
