# src/projects/digital-health-check/discovery/dhc/src/bpapi/swagger-v0.2.json
@@ -11,8 +11,8 @@
           "BloodPressure"
         ],
         "summary": "Retrieves a Blood Pressure result.",
-        "description": "Awesomeness v0.2!",
-        "operationId": "GetBloodPressure",
+        "description": "Returns a text representation of the Blood Pressure results from the provided values.",
+        "operationId": "GetBpResult",
         "parameters": [
           {
             "name": "systolic",
@@ -20,8 +20,8 @@
             "description": "The systolic (top)",
             "required": true,
             "schema": {
-              "type": "number",
-              "format": "double"
+              "type": "integer",
+              "format": "int32"
             },
             "example": 100
           },
@@ -31,15 +31,15 @@
             "description": "The diastolic (bottom)",
             "required": true,
             "schema": {
-              "type": "number",
-              "format": "double"
+              "type": "integer",
+              "format": "int32"
             },
-            "example": 75
+            "example": 99
           }
         ],
         "responses": {
           "200": {
-            "description": "BP result retrieved",
+            "description": "The blood pressure result was returned",
             "content": {
               "application/json": {
                 "schema": {
@@ -47,6 +47,9 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "An error generating the blood pressure result."
           }
         }
       }
@@ -62,6 +65,18 @@
             "description": "The result of the blood pressure.",
             "nullable": true,
             "example": "Normal"
+          },
+          "systolic": {
+            "type": "integer",
+            "description": "The Systolic portion of the blood pressure.",
+            "format": "int32",
+            "example": 100
+          },
+          "diastolic": {
+            "type": "integer",
+            "description": "The Diastolic portion of the blood pressure.",
+            "format": "int32",
+            "example": 75
           }
         },
         "additionalProperties": false,
